Fix dotted style, make levels range

--- a/flexndex.html
+++ b/flexndex.html
@@ -872,8 +872,36 @@ levels
 </dt>
 <dd>
 <p>
-limit the output to this number of levels
+limit the output to these levels.
 </p>
+<div class="dlist"><dl>
+<dt class="hdlist1">
+n1-n2
+</dt>
+<dd>
+<p>
+from level n1 to level n2 inclusive
+</p>
+</dd>
+<dt class="hdlist1">
+n1-
+</dt>
+<dd>
+<p>
+from level n1 up inclusive
+</p>
+</dd>
+<dt class="hdlist1">
+-n1, n1
+</dt>
+<dd>
+<p>
+up to level n1 inclusive
+</p>
+<div class="paragraph"><p>where n1 and n2 are decimal numbers counting from one.  Missing levels
+attribute means all.</p></div>
+</dd>
+</dl></div>
 </dd>
 <dt class="hdlist1">
 style
@@ -1238,7 +1266,7 @@ other backends as standard
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-06-14 18:16:46 EST
+Last updated 2012-06-15 17:24:45 EST
 </div>
 </div>
 </body>
