Non-numeric index names
Allow non-numeric index names
Doc tweak
Whitespace clear

--- a/flexndex.html
+++ b/flexndex.html
@@ -1243,6 +1243,11 @@ docbook built-ins
 multi-column indices
 </p>
 </li>
+<li>
+<p>
+CSS stylable standard styles
+</p>
+</li>
 </ul></div>
 </div>
 <div class="sect2">
@@ -1266,7 +1271,7 @@ other backends as standard
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-06-15 17:24:45 EST
+Last updated 2012-06-16 20:36:35 EST
 </div>
 </div>
 </body>
