--- a/flexndex.html
+++ b/flexndex.html
@@ -729,12 +729,12 @@ asciidoc.install();
 /*]]>*/
 </script>
 </head>
-<body class="article">
+<body class="article" style="max-width:55em">
 <div id="header">
 <h1>Flexndex - a document index generator</h1>
 <span id="author">Lex Trotman</span><br />
 <span id="email"><tt>&lt;<a href="mailto:elextr@gmail.com">elextr@gmail.com</a>&gt;</tt></span><br />
-<span id="revdate">v0.1</span>
+<span id="revdate">v0.1alpha</span>
 </div>
 <div id="content">
 <div class="sect1">
@@ -956,9 +956,21 @@ cellspacing="0" cellpadding="4">
 <td align="left" valign="top"><p class="table">Use</p></td>
 </tr>
 <tr>
+<td align="left" valign="top"><p class="table">default_style</p></td>
+<td align="left" valign="top"><p class="table">yes, <em>simple-dotted</em></p></td>
+<td align="left" valign="top"><p class="table">nothing</p></td>
+<td align="left" valign="top"><p class="table">Name of default style if not specified in ixhere comment</p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">attribute.<strong>&lt;name&gt;</strong></p></td>
+<td align="left" valign="top"><p class="table">yes, nothing</p></td>
+<td align="left" valign="top"><p class="table">nothing</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+<tr>
 <td align="left" valign="top"><p class="table">anchors.<strong>&lt;backend&gt;</strong></p></td>
 <td align="left" valign="top"><p class="table">yes, nothing</p></td>
-<td align="left" valign="top"><p class="table">target</p></td>
+<td align="left" valign="top"><p class="table">std target</p></td>
 <td align="left" valign="top"><p class="table">Markup to output after the ix comment, usually defines a link anchor</p></td>
 </tr>
 <tr>
@@ -971,63 +983,64 @@ were the first terms then a and a,b would also be generated</p></td>
 <tr>
 <td align="left" valign="top"><p class="table">styles.<strong>&lt;style_name&gt;</strong>.<strong>&lt;backend&gt;</strong>.prefix</p></td>
 <td align="left" valign="top"><p class="table">yes, nothing</p></td>
-<td align="left" valign="top"><p class="table">here</p></td>
+<td align="left" valign="top"><p class="table">std here</p></td>
 <td align="left" valign="top"><p class="table">Markup to output before the index</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">styles.<strong>&lt;style_name&gt;</strong>.<strong>&lt;backend&gt;</strong>.postfix</p></td>
 <td align="left" valign="top"><p class="table">yes, nothing</p></td>
-<td align="left" valign="top"><p class="table">here</p></td>
+<td align="left" valign="top"><p class="table">std here</p></td>
 <td align="left" valign="top"><p class="table">Markup to output after the index</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">styles.<strong>&lt;style_name&gt;</strong>.<strong>&lt;backend&gt;</strong>.empty_message</p></td>
 <td align="left" valign="top"><p class="table">yes, "Empty Index</p></td>
-<td align="left" valign="top"><p class="table">here</p></td>
+<td align="left" valign="top"><p class="table">std here</p></td>
 <td align="left" valign="top"><p class="table">Markup to output if the index has no contents, prefix and postfix not
 output</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">styles.<strong>&lt;style_name&gt;</strong>.<strong>&lt;backend&gt;</strong>.entry_start</p></td>
 <td align="left" valign="top"><p class="table">yes, nothing</p></td>
-<td align="left" valign="top"><p class="table">here</p></td>
+<td align="left" valign="top"><p class="table">std here</p></td>
 <td align="left" valign="top"><p class="table">Markup to output before each entry</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">styles.<strong>&lt;style_name&gt;</strong>.<strong>&lt;backend&gt;</strong>.entry_end</p></td>
 <td align="left" valign="top"><p class="table">yes, nothing</p></td>
-<td align="left" valign="top"><p class="table">here</p></td>
+<td align="left" valign="top"><p class="table">std here</p></td>
 <td align="left" valign="top"><p class="table">Markup to output after each entry</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">styles.<strong>&lt;style_name&gt;</strong>.<strong>&lt;backend&gt;</strong>.levels.<strong>&lt;level_no&gt;</strong>.text_internal</p></td>
 <td align="left" valign="top"><p class="table">yes, nothing</p></td>
-<td align="left" valign="top"><p class="table">here ixterm</p></td>
+<td align="left" valign="top"><p class="table">std here ixterm</p></td>
 <td align="left" valign="top"><p class="table">The markup to output if this term is not the last one for the target
 entry</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">styles.<strong>&lt;style_name&gt;</strong>.<strong>&lt;backend&gt;</strong>.levels.<strong>&lt;level_no&gt;</strong>.text_last</p></td>
 <td align="left" valign="top"><p class="table">yes, nothing</p></td>
-<td align="left" valign="top"><p class="table">here ixterm</p></td>
+<td align="left" valign="top"><p class="table">std here ixterm</p></td>
 <td align="left" valign="top"><p class="table">The markup to output for the last term if it cannot to be a link, ie
 it has more than one target</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">styles.<strong>&lt;style_name&gt;</strong>.<strong>&lt;backend&gt;</strong>.levels.<strong>&lt;level_no&gt;</strong>.link_last</p></td>
 <td align="left" valign="top"><p class="table">yes, nothing</p></td>
-<td align="left" valign="top"><p class="table">here ixterm target</p></td>
+<td align="left" valign="top"><p class="table">std here ixterm target</p></td>
 <td align="left" valign="top"><p class="table">The markup to output for the last term if it can be a link</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">styles.<strong>&lt;style_name&gt;</strong>.<strong>&lt;backend&gt;</strong>.levels.<strong>&lt;level_no&gt;</strong>.multi_target</p></td>
 <td align="left" valign="top"><p class="table">yes, nothing</p></td>
-<td align="left" valign="top"><p class="table">here ixterm target</p></td>
+<td align="left" valign="top"><p class="table">std here ixterm target</p></td>
 <td align="left" valign="top"><p class="table">The markup to output for each of multiple targets</p></td>
 </tr>
 </tbody>
 </table>
 </div>
+<div class="paragraph"><p>substituted when the attribute is.</p></div>
 <div class="paragraph"><p>The substitutions column in the above table means:</p></div>
 <div class="tableblock">
 <table rules="all"
@@ -1038,8 +1051,8 @@ cellspacing="0" cellpadding="4">
 <col width="80%" />
 <tbody>
 <tr>
-<td align="left" valign="top"><p class="table">none</p></td>
-<td align="left" valign="top"><p class="table">No substitutions</p></td>
+<td align="left" valign="top"><p class="table">std</p></td>
+<td align="left" valign="top"><p class="table">Built-in and configured attributes</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">here</p></td>
@@ -1060,6 +1073,36 @@ cellspacing="0" cellpadding="4">
 <div class="paragraph"><p>[1] {ixtgt} is a unique numeric piece of text identified with the
 target, use it to make link targets, {tgt_text} is either the <em>text</em>
 attribute from the ix comment, if it exists, otherwise the last term.</p></div>
+<div class="paragraph"><p>The following attributes are built-in, but can be overridden by config
+files:</p></div>
+<div class="tableblock">
+<table rules="all"
+width="100%"
+frame="border"
+cellspacing="0" cellpadding="4">
+<col width="33%" />
+<col width="33%" />
+<col width="33%" />
+<tbody>
+<tr>
+<td align="left" valign="top"><p class="table">Name</p></td>
+<td align="left" valign="top"><p class="table">Value</p></td>
+<td align="left" valign="top"><p class="table">Use</p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">sp</p></td>
+<td align="left" valign="top"><p class="table">' '</p></td>
+<td align="left" valign="top"><p class="table">Use for leading or trailing spaces where they would otherwise be
+stripped off</p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">nl</p></td>
+<td align="left" valign="top"><p class="table"><em>\n</em></p></td>
+<td align="left" valign="top"><p class="table">Newline</p></td>
+</tr>
+</tbody>
+</table>
+</div>
 <div class="paragraph"><p>The meanings of the placeholders are:</p></div>
 <div class="dlist"><dl>
 <dt class="hdlist1">
@@ -1154,7 +1197,7 @@ dotted
 </dt>
 <dd>
 <p>
-a simple built-in non-grouped style that shows each entry as:
+a simple (no CSS) built-in non-grouped style that shows each entry as:
 </p>
 <div class="listingblock">
 <div class="content">
@@ -1164,10 +1207,14 @@ term1.term2.term4 [target1] [target2]</tt></pre>
 <div class="paragraph"><p>where the term3 has only one target and term4 has multiple targets each
 shown in []. The text term3, target1 and target2 are links.</p></div>
 </dd>
-</dl></div>
-<div class="paragraph"><p>simple-grouped::a simple built-in grouped style shows as a traditional
-grouped index as:</p></div>
-<div class="paragraph"><p>+</p></div>
+<dt class="hdlist1">
+simple-grouped
+</dt>
+<dd>
+<p>
+a simple (no CSS) built-in grouped style shows as a traditional
+grouped index as:
+</p>
 <div class="listingblock">
 <div class="content">
 <pre><tt>term1
@@ -1175,8 +1222,9 @@ grouped index as:</p></div>
         term3
         term4 [target1] [target2]</tt></pre>
 </div></div>
-<div class="paragraph"><p>+
-where term3 target1 and target2 are links.</p></div>
+<div class="paragraph"><p>where term3 target1 and target2 are links.</p></div>
+</dd>
+</dl></div>
 </div>
 </div>
 <div class="sect1">
@@ -1271,7 +1319,7 @@ other backends as standard
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-06-16 20:36:35 EST
+Last updated 2012-06-17 20:54:28 EST
 </div>
 </div>
 </body>
